Zero approximatuin to aref

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -32,86 +32,175 @@
 \begin{document}
 
 \sloppy
+
+\thispagestyle{empty}
+\begin{center}
+
+\textbf{\belongAref}
+
+\vspace{1ex}
+
+\textbf{\institutionAref}
+
+\vspace{3ex}
+
+\textbf{Гуда Антон Ігорович}
+
+\end{center}
+
+\vspace{3ex}
+
+\begin{flushright}
+УДК \UDC
+\end{flushright}
+
+\vfill
+
+\begin{center}
+\textbf{\Large
+\booknameUa
+}
+
+\vfill
+
+\dissSpecId --- \dissSpecAref
+
+\vfill
+
+\textbf{Автореферат} \\
+\textbf{  дисертації на здобуття наукового ступеня }\\
+\textbf{доктора \dissScopeAref }
+
+
+\vfill
+
+\cityAref --- \bookyear
+
+\end{center}
+
+\clearpage
+
+\thispagestyle{empty}
+Дисертацією є рукопис
+
+\vspace{3ex plus 2ex}
+
+Робота виконана в Національній металургійній академії України
+Міністерства освіти і науки України.
+
+
+\vspace{3ex plus 2ex}
+
+\begin{tabular}{lp{0.58\textwidth}}
+
+\textbf{Науковий консультант:}
+&
+доктор технічних наук, професор,\newline
+\textbf{Михальов Олександр Ілліч,}\newline
+Національна металургійна академія України,
+завідувач кафедри інформаційних технологій і систем; м.~Дніпро.
+\\
+{~} & {~}
+\\
+\textbf{Офіційні опоненти:} 
+&
+доктор технічних наук, професор,\newline
+\ldots
+\\
+{~} & {~}
+\\
+{~}
+&
+доктор технічних наук, професор,\newline
+\ldots
+\\
+{~} & {~}
+\\
+{~}
+&
+доктор технічних наук, професор,\newline
+\ldots
+\end{tabular}
+
+\vspace{5ex plus 4ex}
+
+
+\vfill
+
+Захист відбудеться 
+<<\_\_\_\_>>
+~\_\_\_\_\_\_\_\_\_\_\_
+\bookyear~р. о \_\_\_\_ годині
+на засіданні спеціалізованої вченої ради Д 08.084.01 у Національній
+металургійній академії України за адресою: 49005, м.~\cityUa,
+пр.~Гагаріна,~4.
+
+
+\vspace{3ex plus 2ex}
+З дисертацією можна ознайомитись у бібліотеці Національної металургійної
+академії України за адресою: 49600, м.~\cityUa, пр.~Гагаріна,~4.
+
+\vspace{3ex plus 2ex}
+Автореферат розісланий 
+<<\_\_\_\_>>
+~\_\_\_\_\_\_\_\_\_\_\_
+\bookyear~р.
+
+\vspace{3ex plus 2ex}
+
+\begin{tabular}{p{0.44\textwidth}p{0.2\textwidth}p{0.35\textwidth}}
+Вчений секретар спеціалізованої вченої ради 
+&
+{~}
+&
+\SekrRadi
+\end{tabular}
+
+\vspace{2ex}
+
+\clearpage
+
+
 \setcounter{page}{1}
 
 \xsect{ЗАГАЛЬНА ХАРАКТЕРИСТИКА РОБОТИ}
 
 \textbf{Актуальність роботи.}
-Сучасні технологічні об'єкти являють собою складні динамічні
-системи, що містять нелінійні елементи. Для досягнення необхідних
-показників якості роботи таких систем, побудови систем керування,
-діагностики працездатності й прогнозування виходів з ладу потрібне
-створення достатнє адекватних моделей процесів, що відбуваються
-в системі. Висока складність технологічних систем і наявність
-в них істотно нелінійних елементів практично виключає
-можливість побудови простих, зручних для аналізу аналітичних
-моделей. У таких випадках побудова моделі базується на фізичних,
-хімічних й інших принципах, що лежать в основі функціонування
-системи, та потребують використання обчислювальних методів
-при їх моделюванні.
+Нелінійні динамічні системи, широко представлені в сучасних технологічних і
+природних процесах, незважаючи на детермінізм їх визначення, можуть проявляти
+хаотичні властивості в своїй динаміці. При цьому як завгодно малі збурення у вхідних
+впливах і параметрах самої системи призводять до значних, але кінцевим збуренням
+вихідного сигналу. Це призводить до певних труднощів при конструюванні,
+управлінні і прогнозі поведінки таких систем.
 
-Невизначеність та нелінійність моделей,
-що описують сучасні  технологічні об'єкти
-й системи керування, у більшості випадків не дає можливості  визначити
-аналітичні залежності значень параметрів від вхідних і вихідних
-сигналів.  Для ідентифікації параметрів подібних систем показали
-свою ефективність пошукові методи.
-При цьому наявність шумів обмежує клас
-застосовних пошукових методів \TermUse{прямими методами},
-які використають у процесі роботи тільки самі
-значення вихідного сигналу системи,
-і не вимірюють або обчислюють у явному виді його похідні.
+При математичному та комп'ютерному моделюванні систем динамічного хаосу
+виникають специфічні для даних систем проблеми. Перш за все -- потрібно
+забезпечити наявність працездатного критерію адекватності моделі. Для задач
+ідентифікації наявність такого критерію є принциповим. Найбільш часто
+використовувані при моделюванні поведінки динамічних систем критерії, засновані
+на звичних заходи в просторі вихідних сигналів, виявляються непрацездатними. З
+іншого боку, спеціальні характеристики оцінювання хаотичних властивостей динамічних
+систем, такі як фрактальна розмірність, показник Ляпунова, перетин Пуанкаре,
+недостатньо інформативні для задачі ідентифікації через обмежений діапазон
+змін, великою похибкою при їх вимірі для реальних систем і суттєвою
+обчислювальною складністю.
 
-Існуючі методи прямого пошуку екстремуму,
-що були розроблені
-Л.А.~Растрігіним,
-Л.Н.~Фіцнером,
-Е.Є.~Гачинським,
-А.І.~Дроздовим,
-О.І.~Михальовим,
-у першу чергу використовувались для рішення задач оптимізації.
-Залишаючись застосовними для рішення
-задач ідентифікації, ці методи не мають достатні характеристики точності й
-швидкості ідентифікації, що пов'язане зі спадкуванням тих обмежень, які
-характерні для задач оптимізації, і в більшості випадків не існують для задач
-нелінійної ідентифікації.
+У якості прототипу для синтезу нових методів ідентифікації доцільно обрати ряд
+методів ідентифікації, які було розроблено та досліджено у роботах
+П.~Ейкхоффа, Л.А.~Растрігіна, Л.Н.~Фіцнера, Е.Є.~Гачинського,
+А.І.~Дроздова, О.І.~Михальова, зокрема пошукові та адаптивно-пошукові
+методи.
+Також вважається доцільним використання як основи
+наступного класу двомодельних адаптивно-пошукових методів,
+які було розроблено та досліджено у попередньої роботі.
+Проте, результати моделювання процесів ідентифікації цими методами
+технічних об'єктів, які проявляють складну та хаотичну динаміку, показали
+їх повну або обмежену непридатність.
 
-З іншого боку одержали розвиток і широке поширення \textit{непараметричні}
-методи ідентифікації, наприклад нейро або нейро-фаззи методи.
-На жаль, використання цих методів, що у цілому мають широкий
-спектр застосовності, не дає інформації про конкретні значення параметрів
-систем, що підлягають ідентифікації. Крім цього, реалізація даних методів вимагає значних
-обчислювальних витрат, що також перешкоджає застосуванню систем,
-що реалізують непараметричні методи ідентифікації в складі промислового устаткування.
-З іншого боку, більшість пошукових методів ідентифікації
-можуть бути реалізовані у
-вигляді простих мікропроцесорних компонентів,
-а досить часто й без використання
-мікропроцесорної техніки, що підвищує надійність і швидкодію системи.
 
-Через велике різноманіття нелінійних динамічних систем не може бути одного
-методу ідентифікації, яких був би адекватний
-всім можливим задачам параметричної ідентифікації.
-Для оцінки складності поставленої задачі й
-визначення працездатності методу ідентифікації потрібні відповідні алгоритми.
-При цьому для досить складних систем
-перевірити працездатність, задати припустимі
-параметри самої системи ідентифікації й визначити характеристики методу можна
-тільки шляхом моделювання самого процесу ідентифікації
-на досить представницькій
-множині вхідних сигналів і шумів.
-
-Через високий ступінь невизначеності в апріорній інформації про параметри
-системи, досить важко заздалегідь визначити діапазон припустимих значень
-параметрів системи ідентифікації. Тому особливу цінність представляють
-методи адаптивно-пошукової ідентифікації (\TermUse{АПІ}),
-здатні підбудовувати свої параметри, ґрунтуючись на
-поточній інформації про стан системи.
-
-Таким чином,
-задача моделювання
-й дослідження процесів адаптивно-пошукової
-ідентифікації нелінійних динамічних систем є \textit{актуальною}.
+Тому проблема ідентифікації динамічних систем, які проявляють хаотичну
+динаміку, або близьку до хаотичної, є
+\textit{актуальною}.
 
 \smallskip
 \textbf{Зв'язок роботи з науковими програмами, планами, темами.}
@@ -125,58 +214,141 @@
 
 \end{itemize}
 
+Результати було впроваджено у рамках науково-практичного дослідження
+``Оцінка    можливості заміни випробувань КА на стійкість до акустичного навантаження
+випробуваннями широкосмугової вібрації'', згідно договору №~V-105-16-3 від 07.09.2016.
+
 \textbf{Мета і задачі дослідження.}
-Метою даного дослідження є створення моделей адаптивно-пошукових
-систем ідентифікації, визначення їхніх властивостей і можливостей.
+Головною метою дослідження є створення нових методів ідентифікації з
+використанням адаптивно-пошукових принципів настроювання параметрів, які
+були б придатні для створення моделей систем, які проявляють хаотичну
+та/або схожу на хаотичну динаміку. В свою чергу, окремо ставиться задача
+розв'язання наукової проблеми створення адекватних моделей процесів
+ідентифікації хаотичних систем з використанням запропонованих нових
+методів, аналізу та дослідження їх характеристик в умовах невизначеності.
+
 Для досягнення даної мети були поставлені наступні задачі:
 
 \begin{itemize}
 
-\item розробити клас методів
+  \item
+  розробити нові критерії ідентифікації, які, на відміну від тих, що
+  існують, при моделюванні були б придатні для аналізу стану та динаміки
+  хаотичних систем, що створить обґрунтування працездатності систем
+  ідентифікації;
 
-\item розробити
+  \item
+  розвинути існуючи та розробити нові методи пошуку, які б не мали
+  обмежень тих, що існують, та у повної мірі використовували можливості
+  паралельних обчислювань та переваг використання ансамблю
+  синергированних моделей;
 
-\item визначити
+  \item
+  розвинути існуючи та розробити нові методи адаптації параметрів
+  системи ідентифікації, здатні пристосуватися до зміни режимів роботи
+  системи;
 
-\item XXX
+  \item
+  розробити програмне забезпечення, придатне для моделювання як систем
+  хаотичної динаміки, так і систем ідентифікації;
 
-\item створити програмний комплекс для моделювання
-процесів АПІ
-нелінійних динамічних систем.
+  \item
+  провести комп'ютерне моделювання процесів ідентифікації систем
+  хаотичної динаміки та дослідити їх працездатність, можливості та
+  характеристики.
+
 \end{itemize}
 
 
 \textbf{Об'єктом дослідження є}
-системи адаптивно-пошукової ідентифікації нелінійних динамічних систем.
+технічні системи, які в процесі їх функціювання можуть
+входити в хаотичні режими.
 
 \smallskip
 \textbf{Предметом дослідження є}
-математичні моделі систем адаптивно-пошукової ідентифікації
-нелінійних динамічних об'єктів.
+математичні моделі процесів та методи
+адаптивно-пошукової ідентифікації технічних систем з хаотичною динамікою.
 
 \smallskip
 \textbf{Методи дослідження.}
-Для вирішення поставлених задач
-використовувався математичний апарат
-теорії управління та ідентифікації,
-обчислювальних методів,
-теорії інформації, тощо.
+Для вирішення поставлених задач використовувався математичний апарат
+теорії управління та ідентифікації нелінійних систем, динамічного хаосу,
+обчислювальних методів, нечіткої логіки, теорії інформації, тощо.
 
 \smallskip
 \textbf{Наукова новизна одержаних результатів:}
+Основний науковий результат полягає в розробці нових методів ідентифікації
+технічних систем хаотичної динаміки, створенні відповідних математичних
+моделей та дослідженні результатів моделювання процесів
+адаптивно-пошукової ідентифікації.
+
+Основні наукові результати, що отримані в дисертаційної роботі, полягають
+ в наступному:
+
 \begin{itemize}
 
-\item уперше
+  \item
+  уперше
+  створено критерії ідентифікації нелінійних динамічних систем,
+  які, на відміну від тих, що існують, дозволяють оцінити їх стан та
+  хаотичну динаміку, та дають підстави для створення ефективних алгоритмів
+  настроювання параметрів моделей систем ідентифікації;
 
-\item уперше
+  \item
+  уперше
+  створено методи адаптивно-пошукової ідентифікації на підставі
+  адаптивно-пошукової парадигми з використанням ансамблю пошукових агентів,
+  які взаємодіють проміж собою, які на відміну від методів, що використовують
+  одну модель або пару моделей, значно підвищують швидкість пошуку та
+  здатні за мінімальний час перестрілюватися при різкої зміні параметра, а на
+  відміну від ройових алгоритмів, нові методи потребують значно меншої
+  кількості моделей та забезпечують певні гарантії пошуку;
 
-\item уперше
+  \item
+  уперше
+  створено нову класифікацію систем ідентифікації динамічних систем,
+  яка як вбирає у себе методи, що існують, так і дозволяє
+  створювати нові методи ідентифікації за рахунок
+  комбінування їх складових частин;
 
-\item уперше
+  \item
+  набуло подальший розвиток
+  методи оцінювання якості ідентифікації,
+  які на відміну від тих, що існують,
+  враховують використання множини агентів;
 
-\item уперше
 
-\item уперше
+  \item
+  набули подальший розвиток
+  підходи до адаптації параметрів систем
+  адаптивно-пошукової ідентифікації, які придатні використовувати поточну
+  інформацію від ансамблю сінергированих моделей, та корегувати глобальні
+  параметри пошуку;
+
+  \item
+   уперше
+   визначено, що системи з сухим тертям з точки зору задачі ідентифікації
+   при певних  умовах функціонування
+   мають властивості, що поєднують їх з системами хаотичної динаміки, тобто з
+   системами хаотичної динаміки їх поєднує суттєва залежність від початкових
+   умов та вид атрактору, що також потребує використання нових методів ідентифікації;
+
+  \item
+    набула подальший розвиток
+    модель генератора Копітца, яка враховує
+    більшу кількість нелінійних ефектів,
+    що забезпечує більш адекватні результати процесу
+    ідентифікації її параметрів новими методами;
+
+  \item
+   уперше
+   запропоновано модель системи хаотичної динаміки системи зв'язаних релаксаційних генераторів,
+   яка відрізняєшся від існуючих відсутністю індуктивних компонентів,
+   працездатністю при малих напругах та можливістю
+   керування частотним діапазоном у широкому діапазоні,
+   що сприяє процесу аналізу хаотичної динаміки
+   фізичного об'єкту, перевірки адекватності математичної моделі
+   та властивостей системи ідентифікації стосовно цієї системи.
 
 
 \end{itemize}
@@ -184,27 +356,40 @@
 
 \smallskip
 \textbf{Практичне значення одержаних результатів.}
-Розроблені методи ідентифікації
+Розроблені методи ідентифікації було використано
+при проектуванні, створенні, налаштовуванні параметрів
+стенду дослідження вібраційного та акустичного впливу.
+Аналіз результатів даних з цього стенду
+дав можливість указати потрібні нелінійні властивості системи,
+та діапазон параметрів, які у сукупності
+забезпечують широкосмуговий спектр коливань.
+
+Створене програмне середовище для моделювання нелінійних динамічних систем
+використається при проведенні практичних робіт по дисциплінам
+``Моделювання систем'',
+``Сучасні системи управління'' на кафедри інформаційних технологій
+і систем Національної металургійної академії України.
+
 
 \smallskip
 \textbf{Особистий внесок здобувача.}
 
 Усі основні положення і результати
 дисертаційної роботи, які виносяться на захист, отримано здобувачем особисто та
-опубліковано в роботах [1-–XX]. У наукових працях, опублікованих у співавторстві,
-здобувачу належать наступні результати. У роботі [1]
+опубліковано в роботах [1--46]. У наукових працях, опублікованих у співавторстві,
+здобувачу належать наступні результати. У роботі [1] \ldots
 
 
 
 \smallskip
 \textbf{Апробація результатів.}
 Основні положення дисертаційної роботи доповідались на наукових
-семінарах кафедри ІТС,
+семінарах кафедри ІТС, \ldots
 
 \smallskip
 \textbf{Публікації.}
 По темі дисертації опубліковано
-XX друкованих праць:
+46 друкованих праць:
 
 \smallskip
 \textbf{Структура і обсяг роботи.}
@@ -218,23 +403,39 @@ XX найменувань,
 \xsect{ОСНОВНИЙ ЗМІСТ РОБОТИ}
 
 У \textbf{вступі} обґрунтовано актуальність теми,
-показана необхідність побудови
-математичних моделей  Сформульовані цілі і задачі дослідження,
+сформульованл цілі і задачі дослідження,
 відзначені наукова новизна і практична цінність роботи, відображені
 одержані результати, що виносяться на захист.
 
 У \textbf{першому розділі}
-проведено аналітичний огляд проблем постановки задачі ідентифікації,
+проведено аналітичний огляд проблем
+влстивостей систем хаотчної динаміки
+з точки зору задачі ідентифікації.
 
+Проведено аналіз публікації,
+розглянуто низка сетодів ідентификації,
+що існує.
+Розглянуто причини,
+які на дозволяють використовувоти ці методи для
+ідентифицації систем динаміного хаосу,
+а також складних нехаотичних систем,
+які з точки зору ідентификації
+мають з ними певні загальні риси.
 
 
 
 
 
 \textbf{Другий розділ}
-присвячений розгляду питань інформаційної оцінки якості роботи
-методів ідентифікації  й складності задачі ідентифікації.
+присвячений
+сінтезу крітеріїв ідентификації,
+які мають сенс при роботі с системами
+хаотичної динаміки.
 
+Розлянуто фізичні та емпірічні підстави для створення
+еритеріїв. Встановлено
+загальні властивості критеріїв,
+які впливають на процес ідентификації.
 
 
 
@@ -243,39 +444,103 @@ XX найменувань,
 \medskip
 
 \textbf{У третьому розділі}
+разглянуто структуру пошукових систем
+ідентификації.
+Веедено поняття пошукового агенту,
+координатору пошуку.
+Розглянуто методи,
+які реалізуются пошуковим агентом для
+реалізації власної динамки.
+Зроблено аналіз методів, яки використовуються
+координаторми пошуку для досягнення мети
+задачі ідентифікації, та засоби адаптації.
+
+Введено класификацю структури та методів систем іденіификації у цілому.
+
+Запропановано метод оцінювання помилок ідентификації
+з врахування мультиагентної структури.
+
+
 
 
 
 \textbf{У четвертому розділі} розглядається розроблене програмне
 забезпечення
 для моделювання
-поведінки  нелінійних динамічних систем.
+поведінки  нелінійних,
+у тому числі хаотичних динамічних систем.
 Програма була створена для моделювання динаміки
 нелінійних систем та проведення аналізу.
 
 Мова програмування --- C++,
 графічний інтерфейс реалізовано за допомогою
-бібліотеці Qt.
+бібліотек Qt та mathGL.
 Розроблено ієрархію класів для
 моделювання різноманітних елементів,
 у тому числі суттєво нелінійних.
+
+Також було створено спеціалізоване
+програмне забезпечення для мікроконтролерів,
+щодо забазпечення взаємодії
+з реальнии динаміними системами.
 
 
 
 
 \textbf{У п'ятому розділі}
 розглянуте практичне застосування розроблених методів при моделюванні
-процесів ідентифікації
+процесів ідентифікації ряду систем хаотичної динаміки,
+ак відомих, так і тих, які розглянуто уперше.
 
+У підрозділі 5.1 досліджуються процеси ідентифікації системи Лоренца.
 
+У підрозділі 5.2 досліджуються процеси ідентифікації системи Sprott A.
 
+У підрозділі 5.3 досліджуються процеси ідентифікації системи Дуффінга.
+
+У підрозділі 5.4 досліджуються процеси ідентифікації системи Чуа.
+
+У підрозділі 5.5 досліджуються процеси ідентифікації системи Ван-дер-Поля.
+
+У підрозділі 5.6 досліджуються процеси ідентифікації системи Колпітца у традиційному вигляді.
+
+У підрозділі 5.7 досліджуються процеси ідентифікації системи вібраційної системи
+із зоною нечутливості у силі, що повертає.
+
+У підрозділі 5.7 досліджуються процеси ідентифікації системи з сухим тертям.
+
+У підрозділі 5.8 досліджуються процеси ідентифікації системи  вібраційної системи
+із гістерезисом у силі, що повертає, у хаотичному режимі.
 
 \textbf{У шостому розділі}
 розглянуте практичне застосування
+нових методів ідентифікації для генератора Колпітца
+з використанням реального фізичного об'єкту.
+Впроваджену нову математичну модель,
+яка враховує більше нелінійних властивостей
+BJT транзистора, та різних режимів роботи.
+
+Створено мікроконтролерну систему, яка
+дозволила отримати дані з реального
+генератора, та за допомогою програмного комплексу,
+який описано у розділі 4, перевірити адекватність як
+нової моделі генератора, що було використано,
+так і працездатність створеної для неї системи ідентифікації.
 
 
-\textbf{У сьосому розділі}
-розглянуте практичне застосування
+
+\textbf{У сьомому розділі}
+запропоновано модель
+системи зв'язаних релаксаційних генераторів,
+які проявляють хаотичну динаміку при певних умовах.
+Досліджуються  властивості цієї системи.
+
+Створено фізичний об'єкт,
+який реалізовує запропановану динаміку,
+а також
+створено мікроконтролерну систему, яка
+дозволила перевірити адекватність математичної моделі.
+Також було проведено властивостей системи ідентифікації стосовно цієї системи.
 
 \xsect{ВИСНОВКИ}
 
@@ -283,32 +548,26 @@ XX найменувань,
 
 \begin{itemize}
 
-\item
-XXX
+  \item
+  створено нові критерії ідентифікації, які, на відміну від тих, що
+  існують, придатні для аналізу стану та динаміки
+  хаотичних систем, що створить фізично зумовлене обґрунтування працездатності систем
+  ідентифікації;
 
+  \item
+  створено новий клас систем ідентификації у межах
+    адаптивно-пошуковой парадигми,
+    які за рахунок використання колективної динаміки
+    анфамблю пошукових агентів забезаечують
+    кращу якість ідентифицації;
 
-\item
-XXX
+  \item
+  створено програмне забезпечення, придатне для моделювання як систем
+  хаотичної динаміки, так і систем мультиагентної ідентифікації;
 
-
-\item
-XXX
-
-
-\item
-XXX
-
-
-\item
-XXX
-
-
-\item
-XXX
-
-
-\item
-XXX
+  \item
+  проведено комп'ютерне моделювання процесів ідентифікації систем
+  хаотичної динаміки, підтверджено їх працездатність.
 
 
 \end{itemize}
