Opponents, biblio fix/

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -98,28 +98,35 @@
 доктор технічних наук, професор,\newline
 \textbf{Михальов Олександр Ілліч,}\newline
 Національна металургійна академія України,
-завідувач кафедри інформаційних технологій і систем; м.~Дніпро.
+завідувач кафедри інформаційних технологій і систем.
 \\
 {~} & {~}
 \\
-\textbf{Офіційні опоненти:} 
+\textbf{Офіційні опоненти:}
 &
 доктор технічних наук, професор,\newline
-\ldots
-\\
-{~} & {~}
-\\
-{~}
-&
-доктор технічних наук, професор,\newline
-\ldots
+\textbf{Бідюк Петро Іванович},
+  професор кафедри математичних методів системного аналізу ННК ``ІПСА'' НТУУ ``КПІ'' ім.~Ігоря Сікорського;
 \\
 {~} & {~}
 \\
 {~}
 &
 доктор технічних наук, професор,\newline
-\ldots
+\textbf{Жолткевич Григорій Миколайович},
+  декан механіко-математичного факультету,
+  завідуючий кафедрою теоретичної та прикладної інформатики
+  Харківського національного університету ім.~В.Н.~Каразіна;
+\\
+{~} & {~}
+\\
+{~}
+&
+доктор фіз.-мат. наук, професор,\newline
+\textbf{Білозьоров~Василь Євгенович}
+професор кафедри комп`ютерних технологій
+Дніпропетровського національного університету
+ім.~Олеся Гончара.
 \end{tabular}
 
 \vspace{5ex plus 4ex}
@@ -132,7 +139,7 @@
 ~\_\_\_\_\_\_\_\_\_\_\_
 \bookyear~р. о \_\_\_\_ годині
 на засіданні спеціалізованої вченої ради Д 08.084.01 у Національній
-металургійній академії України за адресою: 49005, м.~\cityUa,
+металургійній академії України за адресою: 49600, м.~\cityUa,
 пр.~Гагаріна,~4.
 
 
@@ -288,14 +295,14 @@
 \begin{itemize}
 
   \item
-  уперше
+  вперше
   створено критерії ідентифікації нелінійних динамічних систем,
   які, на відміну від тих, що існують, дозволяють оцінити їх стан та
   хаотичну динаміку, та дають підстави для створення ефективних алгоритмів
   настроювання параметрів моделей систем ідентифікації;
 
   \item
-  уперше
+  вперше
   створено методи адаптивно-пошукової ідентифікації на підставі
   адаптивно-пошукової парадигми з використанням ансамблю пошукових агентів,
   які взаємодіють проміж собою, які на відміну від методів, що використовують
@@ -305,7 +312,7 @@
   кількості моделей та забезпечують певні гарантії пошуку;
 
   \item
-  уперше
+  вперше
   створено нову класифікацію систем ідентифікації динамічних систем,
   яка як вбирає у себе методи, що існують, так і дозволяє
   створювати нові методи ідентифікації за рахунок
@@ -326,7 +333,7 @@
   параметри пошуку;
 
   \item
-   уперше
+   вперше
    визначено, що системи з сухим тертям з точки зору задачі ідентифікації
    при певних  умовах функціонування
    мають властивості, що поєднують їх з системами хаотичної динаміки, тобто з
@@ -341,7 +348,7 @@
     ідентифікації її параметрів новими методами;
 
   \item
-   уперше
+   вперше
    запропоновано модель системи хаотичної динаміки системи зв'язаних релаксаційних генераторів,
    яка відрізняєшся від існуючих відсутністю індуктивних компонентів,
    працездатністю при малих напругах та можливістю
@@ -490,7 +497,7 @@ XX найменувань,
 \textbf{У п'ятому розділі}
 розглянуте практичне застосування розроблених методів при моделюванні
 процесів ідентифікації ряду систем хаотичної динаміки,
-ак відомих, так і тих, які розглянуто уперше.
+ак відомих, так і тих, які розглянуто вперше.
 
 У підрозділі 5.1 досліджуються процеси ідентифікації системи Лоренца.
 
