--- a/atuworks.bib
+++ b/atuworks.bib
@@ -14,6 +14,12 @@
   location = {Днепропетровск},
 }
 
+@xdata{st_ik,
+  journal = {Системні технології. Регіональний міжвузівський збірник наукових праць (Index Copernicus)},
+  location = {Днепропетровск},
+}
+
+
 @xdata{ISDMCI,
   journal = {Материалы международной конференции ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI)},
   location = {Херсон: ХНТУ},
@@ -98,10 +104,11 @@
 }
 
 
+% TODO: Copernicus?
 @Article{atu_khar_autodor25,
   title = {Критерии идентификации параметров хаотической динамики управляемого объекта},
   author = {Гуда, А. И. and Михалёв, А. И. and Деревянко, А. И.},
-  journal = {Автомобільний транспорт.  – Вісник Харківського національного автодорожнього університету.},
+  journal = {Автомобільний транспорт.  -– Вісник Харківського національного автодорожнього університету.},
   language     = {russian},
   langid       = {russian},
   year = {2009},
@@ -319,7 +326,7 @@
 @Article{atu_st91,
   title = {Influence of input and measurement noise to Lorenz system adaptive-searching identification},
   author = atume,
-  xdata = {st},
+  xdata = {st_ik},
   year = {2014},
   language     = {russian},
   langid       = {russian},
@@ -375,7 +382,7 @@
 @Article{atu_electronika2013,
   title = {Physical background in identification criterion synthesis},
   author = {Guda, A. I and Mikhalyov, A. I. and Derevjanko, A. I.  and Kisała },
-  journal = {Elektronika (LIV)},
+  journal = {Elektronika  konstrukcje, technologie, zastosowania (Index Copernicus)},
   language     = {english},
   langid       = {english},
   number = {8},
@@ -397,7 +404,7 @@
 
 @Article{atu_st99,
   title = {Multi-model methods and parameters estimation approaches on non-linear dynamic system identification},
-  xdata = {st},
+  xdata = {st_ik},
   author = atume,
   language     = {english},
   year = {2015},
@@ -429,7 +436,7 @@
 @Article{atu_csit2015,
   title = {Method of Lorenz systems parametric identification by the searching models ensemble},
   author = atume,
-  journal = {Scientific and Technical Conference ``Computer Sciences and Information Technologies'' (CSIT) },
+  journal = {Scientific and Technical Conference ``Computer Sciences and Information Technologies'' (CSIT) (Scopus)},
   language     = {english},
   langid       = {english},
   year = {2015},
@@ -440,8 +447,12 @@
 @Article{atu_arsirii,
   title = {Система поддержки принятия решений по повышению эффективности гидроаеродинамических процессов во вспомогательных элементах    энергетических агрегатов},
   author = {Арсирий, Е. А. and  Антощук, С. Г. and Арсирий, В. А. and Гуда, А. И. },
+  journal = {Управляющие системы и машины (РИНЦ)},
   language     = {russian},
   langid       = {russian},
+  number = {6},
+  year = {2015},
+  pages = {43--50},
   year = {2015}
 }
 
@@ -522,11 +533,21 @@
 }
 
 
+@Article{atu_DSMP2016,
+  title = {Criteria synthesis problem for the chaotic systems identification},
+  author = atume,
+  journal = {Proceedings of the 2016 IEEE 1st International Conference on Data Stream Mining and Processing, DSMP 2016, (Web of Science, Scopus)},
+  location = {Lviv, Ukraine},
+  language     = {english},
+  langid       = {english},
+  year = {2016},
+  pages = {125--128}
+}
 
 @Article{atu_ric2016,
   title = {Multi-models identification methods comparison in the non-linear dynamic system identification task},
   author = atume,
-  journal = {Радиоэлектроника, информатика, управление},
+  journal = {Радиоэлектроника, информатика, управление (Web of Science)},
   location = {Запоріжжя, ЗНТУ},
   language     = {english},
   langid       = {english},
@@ -536,7 +557,17 @@
   pages = {112--119}
 }
 
-
+@Inbook{atu_colmono2016,
+  booktitle = {Системные технологии моделирования сложных систем},
+  title = {Оценивание эффективности применения интегральных критериев в задачах параметрической идентификации хаотических систем},
+  author = atum,
+  editor = mai,
+  location = {Днипро},
+  language     = {russian},
+  langid       = {russian},
+  year = {2016},
+  pages = {200--229}
+}
 
 
 
